# hakaton_ml_lep

./: .env.example  .gitignore  README.md  docker-compose.yml
ai_results/: train.ipynb
ai_results/result1/: args.yaml  results.csv
ai_results/result2/: args.yaml  results.csv
ai_results/result3/: args.yaml  results.csv
ai_results/result4/: args.yaml  results.csv
ai_results/train/: args.yaml  results.csv
lep_frontend/: next.config.ts  package-lock.json  package.json
lep_frontend/app/: globals.css  layout.tsx  page.tsx
lep_frontend/app/allproject/: page.tsx
lep_frontend/app/api/: AuthContext.tsx  api.ts
lep_frontend/app/batch/[id]/: page.tsx
lep_frontend/app/component/: Header.tsx  map.tsx
lep_frontend/app/hoc/: withAuth.tsx
lep_frontend/app/loadimage/: page.tsx
lep_frontend/app/profile/: page.tsx
lep_frontend/app/stats/: page.tsx
ml_backend/: Dockerfile  pyproject.toml  requirements.txt
ml_backend/ml_backend/: celery.py  settings.py  urls.py
ml_backend/users/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
ml_backend/users/management/commands/: initadmin.py
ml_backend/users/migrations/: 0001_initial.py
ml_backend/vision/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
ml_backend/vision/migrations/: 0001_initial.py  0002_batch_status.py  0003_lepimage_result_alter_batch_name.py
nginx/: nginx.conf
